@@ -11,9 +11,12 @@ import com.sist.vo.GoodsVO;
 
 import java.awt.*;
 import java.awt.event.*;
+import java.net.URI;
 import java.net.URL;
-public class HomePanel extends JPanel{
-   UserMainFrame uf;
+public class HomePanel extends JPanel
+implements ActionListener
+{
+   ControlPanel cp;
    JPanel pan=new JPanel();
    JButton b1,b2,b3,b4,b5,b6;
    JLabel la=new JLabel("0 page / 0 pages");
@@ -21,15 +24,33 @@ public class HomePanel extends JPanel{
    int curpage=1;
    int totalpage=0;
    GoodsDAO dao=new GoodsDAO();
-   public HomePanel(UserMainFrame uf)
+   int type=1;
+   public HomePanel(ControlPanel cp)
    {
-	   this.uf=uf;
+	   this.cp=cp;
+	   setLayout(null);
+	   b1=new JButton("전체 상품");
+	   b2=new JButton("베스트 상품");
+	   b3=new JButton("신상품");
+	   b4=new JButton("특가 상품");
+	   JPanel p=new JPanel();
+	   p.add(b1);
+	   p.add(b2);
+	   p.add(b3);
+	   p.add(b4);
+	   p.setBounds(10,20, 400, 35);
+	   add(p);
 	   pan.setLayout(new GridLayout(3,4,8,8));
-	   pan.setBounds(10,50, 650, 580);
+	   pan.setBounds(10,60, 920, 480);
 	   //pan.setBackground(Color.pink);
 	   add(pan);
 	   init();
 	   print();
+	   
+	   b1.addActionListener(this);
+	   b2.addActionListener(this);
+	   b3.addActionListener(this);
+	   b4.addActionListener(this);
    }
    public void init()
    {
@@ -44,20 +65,59 @@ public class HomePanel extends JPanel{
    // 화면 출력 
    public void print()
    {
-	   List<GoodsVO> list=dao.goodsListData(1, curpage);
+	   List<GoodsVO> list=dao.goodsListData(type, curpage);
+	   //pan.setLayout(new GridLayout(3,4,8,8));
 	   for(int i=0;i<list.size();i++)
 	   {
 		   GoodsVO vo=list.get(i);
 		   // list에 값을 한개씩 가지고 온다 
 		   try
 		   {
-			   URL url=new URL(vo.getGoods_poster());
+			   URI uri=new URI(vo.getGoods_poster());
+			   URL url=uri.toURL();
+			   // new URL() => 경고
 			   Image image=
-					 ImageChange.getImage(new ImageIcon(url), 150, 180);
+					 ImageChange.getImage(new ImageIcon(url), 250, 180);
 			   imgs[i]=new JLabel(new ImageIcon(image));
 			   imgs[i].setToolTipText(vo.getGoods_name());
 			   pan.add(imgs[i]);
 		   }catch(Exception ex) {}
+	   }
+   }
+   @Override
+   public void actionPerformed(ActionEvent e) {
+	// TODO Auto-generated method stub
+	   if(e.getSource()==b1)
+	   {
+		   type=1;
+		   curpage=1;
+		   init();
+		   print();
+		   revalidate();
+	   }
+	   else if(e.getSource()==b2)
+	   {
+		   init();
+		   type=2;
+		   curpage=1;
+		   print();
+		   revalidate();
+	   }
+	   else if(e.getSource()==b3)
+	   {
+		   init();
+		   type=3;
+		   curpage=1;
+		   print();
+		   revalidate();
+	   }
+	   else if(e.getSource()==b4)
+	   {
+		   init();
+		   type=4;
+		   curpage=1;
+		   print();
+		   revalidate();
 	   }
    }
 }
